--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1445,3 +1445,7 @@ input[type=number] {
 .vs__search::placeholder {
     color: #CDCDCD !important;
 }
+/* css for modal */
+.modal-dialog {
+    max-width: 500px;
+}
